<resources>
    <string name="store">Dream Cafe</string>
    <string name="contact">6459 2970</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="no_of_pax">No. of pax</string>
    <string name="time_of_reservation">Time of reservation</string>
    <string name="date_of_reservation">Date of reservation</string>
    <string name="preferred_table_area">Preferred table area</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-smoking Area</string>
    <string name="submit">SUBMIT</string>
    <string name="reset">RESET</string>
    <string name="textview"></string>
    <string name="location">65 Orchard Road, Singapore 764820</string>
</resources>